--- a/index.html
+++ b/index.html
@@ -10,29 +10,48 @@
 </head>
 
 <body>
-    <form action="POST" id="form1" novalidate>
-        <h1>FORM VALIDATION ODEVI</h1>
-        <div class="form-body">
-            <div>
-                <label for="userName">Kullanıcı Adı :</label>
-                <input type="text" placeholder="Kullanıcı Adı" required>
+    <div class="wrapper">
+        <div class="title">
+            Register Form</div>
+        <form action="#" id="form" novalidate>
+            <h1 class="title2">FORM VALIDATION ODEVI</h1>
+
+            <div class="field">
+                <div class="field2">
+                    <input type="text" placeholder="Kullanıcı Adı" id="ad" required>
+                    <p id="adP"></p>
+                </div>
             </div>
-            <div>
-                <label for="password">Parola :</label>
-                <input type="password" placeholder="Şifre" required>
+            <div class="field">
+                <div class="field2">
+
+                    <input type="password" id="password" placeholder="Şifre" required>
+                    <p id="pasEr"></p>
+                </div>
             </div>
-            <div>
-                <label for="eMail">E-Mail :</label>
-                <input type="email" placeholder="E-mail" required>
+            <div class="field">
+                <div class="field2">
+                    <input type="email" placeholder="E-mail" id="mail" required>
+                    <p id="mailP"></p>
+                </div>
             </div>
-            <div>
-                <input type="checkbox" required>
+
+
+
+            <div class="field">
+                <div class="field2">
+                    <input class="check" type="checkbox" id="cheI" required>
+                    <p id="checkP"></p>
+                </div>
             </div>
+
+
             <div>
-                <button>Gönder</button>
+                <button type="submit" class="field submit">Gönder</button>
             </div>
-        </div>
-    </form>
+
+        </form>
+    </div>
     <script src="index.js"></script>
 </body>
 
